fixed spacing sizing

--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-size: 100%; }
 
-h1 { margin-bottom: 1em; }
+/*h1 { margin-bottom: 1em; }*/
 p { margin: 1em 0; }
 
 a         { color: #00a; }
@@ -50,7 +50,7 @@ font-family: 'amatic_scregular';
 }
 
 .posts li {
-  line-height: 1.75em;
+  line-height: 4em;
   margin: 40px 0px 40px 0px;
 }
 
@@ -75,7 +75,7 @@ font-family: 'amatic_scregular';
   text-align: justify;
   width: 80%;
   margin: 3em auto 2em;
-  line-height: 1.5em;
+  line-height: 4.5em;
 }
 
 .header a {
@@ -86,7 +86,7 @@ font-family: 'amatic_scregular';
 .title {
   display: inline-block;
   /* margin-bottom: 2em; */
-  margin-left: -70px;
+/*  margin-left: -70px;/*/
   font-family: 'Amatic SC';
   font-size: 6em;
 }
